# Tickr

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  PROGRESS.md  README.md
engine/: pyproject.toml
engine/alembic/: env.py
engine/alembic/versions/: 795388e90bdc_initial_cache_schema.py
engine/app/: __init__.py  config.py  main.py
engine/app/adapters/: __init__.py  base.py  coinbase.py  edgar.py  finnhub.py  fred.py  parquet_history.py  yfinance.py
engine/app/analysis/: __init__.py  groq_engine.py  interface.py
engine/app/api/: __init__.py  health.py  routes.py
engine/app/cache/: __init__.py  base.py  layered.py  memory.py  postgres.py  ttl_config.py
engine/app/db/: __init__.py  models.py  session.py
engine/app/schema/: __init__.py  analysis.py  backtest.py  company.py  country.py  explain.py  filings.py  freshness.py  fundamentals.py  options.py  price_only.py  screener.py
engine/app/services/: backtest.py  backtest_core.py  black_scholes.py  company.py  countries.py  explain.py  fundamentals.py  (+9 more)
engine/scripts/: backfill_historical.py  run_backtest_demo.py  upload_to_r2.py
engine/tests/: __init__.py  manual_verify.py  probe_duckdb_local.py  probe_duckdb_r2.py  probe_yfinance_coverage.py  test_adapters.py  test_analysis.py  test_backtest_schema.py  test_backtest_service.py  test_black_scholes.py  test_cache.py  test_countries.py  test_fred_adapter.py  test_indicators.py  test_ma_crossover.py  test_options_service.py  test_parquet_history.py  test_provider_registry.py  test_rule_engine.py  verify_global_fundamentals.py  verify_ratios.py
(+103 files in other folders)
